--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
     <div id="miHeader"></div>
     
     <div class="contenedor">
-        <section class="uno">
-            <img class="fondo" src="multimedia/imagenes/fondo.jpg" alt="Fondo pantalla">
-        </section>    
-        <section class="dos">
+        <img class="fondo" src="multimedia/imagenes/fondo.jpg" alt="Fondo pantalla">
+        <article class="fondoTxt">
             <p class="headTitle">Tu empresa a pleno rendimiento</p>
             <p class="headSubt1">Nos ocupamos de que tu equipamiento esté siempre optimizado.</p>
             <p class="headSubt2">¿En qué podemos ayudarte?</p>
-        </section>
+        </article>
     </div>
     <div class="selector">
         <article class="mtto">
