--- a/cabecera.html
+++ b/cabecera.html
@@ -1,31 +1,31 @@
-    <div class="conten_1_2">
-        <div class="conten_1">
-            <section class="phoneMail">
-                <img class="phoneIcoImg" src="./multimedia/imagenes/phone-ico.png" alt="Icono teléfono">
-                <p class="phoneIcoTxt">971 60 99 88</p>
-                <img class="emalIcoImg" src="./multimedia/imagenes/mail-ico.png" alt="Icono email">
-                <a href="#"><p class="emailIcoTxt">info@dispalma.com</p></a>
-            </section>
-            <nav class="cab_Nav">
-                <a class="mgCnav" href="#">Sobre nosotros</a>
-                <a class="mgCnav" href="#">Política de privacidad</a>
-                <a class="mgCnav" href="#">Política de cookies</a>
-            </nav>    
-        </div>
-        <div class="separa">
-            <hr>
-        </div>
-        <div class="conten_2">
-            <a href="www.dispalma.com">
-                <img class="imgLogo" src="./multimedia/imagenes/logo_dispalma.png" alt="Logo Dispalma">
-            </a>
-            <nav class="menuGral">
-                <a class="mgTxt" href="#">Inicio</a>
-                <a class="mgTxt" href="#">Mantenimiento informático</a>
-                <a class="mgTxt" href="#">Sistemas de impresión</a>
-                <a class="mgTxt" href="#">Audiovisuales</a>
-                <a class="mgTxt" href="#">Productos</a>
-                <a class="mgTxt" href="#">Contacto</a>
-            </nav>
-        </div>
+<div class="conten_1_2">
+    <div class="conten_1">
+        <article class="cPhone">
+            <img class="phoneIcoImg" src="./multimedia/imagenes/phone-ico.png" alt="Icono teléfono">
+            <p class="phoneIcoTxt">971 60 99 88</p>
+        </article>
+        <article class="cMail">
+            <img class="emalIcoImg" src="./multimedia/imagenes/mail-ico.png" alt="Icono email">
+            <a href="#"><p class="emailIcoTxt">info@dispalma.com</p></a>
+        </article>
+        <nav class="cabNav">
+            <a class="mgCnav" href="#">Sobre nosotros</a>
+            <a class="mgCnav" href="#">Política de privacidad</a>
+            <a class="mgCnav" href="#">Política de cookies</a>
+        </nav>
+    </div>    
+    <div class="conten_2">
+        <a href="www.dispalma.com">
+            <img class="imgLogo" src="./multimedia/imagenes/logo_dispalma.png" alt="Logo Dispalma">
+        </a>
+        <nav class="menuGral">
+            <a class="mgTxt" href="#">Inicio</a>
+            <a class="mgTxt" href="#">Mantenimiento informático</a>
+            <a class="mgTxt" href="#">Sistemas de impresión</a>
+            <a class="mgTxt" href="#">Audiovisuales</a>
+            <a class="mgTxt" href="#">Productos</a>
+            <a class="mgTxt" href="#">Contacto</a>
+        </nav>
     </div>
+</div>
+
